--- a/notebooks/4.01-ym-oct2024-report.rmd
+++ b/notebooks/4.01-ym-oct2024-report.rmd
@@ -28,7 +28,6 @@ The analysis uses data from the Student Academic Management System (SAMS), which
 
 # Analysis
 
-## Import ITI and Diploma Data from the database
 
 ```{r, echo=FALSE, eval=FALSE}
 install.packages("dplyr")
@@ -41,7 +40,7 @@ install.packages("kableExtra")
 ```
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 # Load the libraries
 library(RSQLite)
 library(DBI)
@@ -53,8 +52,6 @@ library(knitr)
 
 ```
 
-## Load the data 
-# ITI Student Data from 2017 to 2024
 ```{r, echo=FALSE}
 con <- dbConnect(RSQLite::SQLite(), "C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db")
 
@@ -77,7 +74,6 @@ student_iti_admis = student_data_iti %>%
 
 ```
 
-# Diploma Student Data from 2018 to 2024 
 ```{r, include=FALSE,echo=FALSE}
 con <- dbConnect(RSQLite::SQLite(), "C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db")
 
@@ -180,7 +176,6 @@ pivot_table_dip_inc_soc_2023 <- student_dip_admis %>%
 
 ```
 
-# Descriptive Tables
 ```{r}
 ITI_soc_grp %>%
   knitr::kable(caption = "Table _: Social Category Composition ITIs (%)", digits = 1) %>%
@@ -499,7 +494,6 @@ poly_trade_count = student_dip_admis %>%
 ```
 
 
-# Descriptive Tables
 ```{r tables, echo=FALSE, results='asis'}
 iti_student_count_summary %>%
   knitr::kable(caption = "Table _: Count of ITI Students", digits = 1) %>%
