--- a/notebooks/4.01-ym-oct2024-report.rmd
+++ b/notebooks/4.01-ym-oct2024-report.rmd
@@ -30,12 +30,7 @@ The analysis uses data from the Student Academic Management System (SAMS), which
 
 
 ```{r, echo=FALSE, eval=FALSE}
-install.packages("dplyr")
-install.packages("tidyverse")
-install.packages("knitr")
-install.packages("DBI")
-install.packages("RSQLite")
-install.packages("kableExtra")
+
 
 ```
 
@@ -53,7 +48,7 @@ library(knitr)
 ```
 
 ```{r, echo=FALSE}
-con <- dbConnect(RSQLite::SQLite(), "C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db")
+con <- dbConnect(RSQLite::SQLite(), file.path(config$SAMS_DB))
 
 # Query data for ITI module for years 2017 to 2023
 query <- "SELECT * FROM students WHERE module = 'ITI' AND year BETWEEN 2017 AND 2024;"
@@ -75,7 +70,7 @@ student_iti_admis = student_data_iti %>%
 ```
 
 ```{r, include=FALSE,echo=FALSE}
-con <- dbConnect(RSQLite::SQLite(), "C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db")
+con <- dbConnect(RSQLite::SQLite(), file.path(config$SAMS_DB))
 
 # Query data for ITI module for years 2017 to 2023
 query <- "SELECT * FROM students WHERE module = 'Diploma' AND year BETWEEN 2018 AND 2024;"
@@ -277,61 +272,19 @@ Poly_graduates_same_year <- student_iti_admis %>%
 
 
 
-```{r, echo=FALSE}
-con <- dbConnect(RSQLite::SQLite(), "C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db")
-
-# Query data for ITI module for years 2017 to 2023
-query <- "SELECT * FROM students WHERE module = 'ITI' AND year BETWEEN 2017 AND 2024;"
-
-# Send query to the database
-result <- dbSendQuery(con, query)
-
-# Fetch the relevant data
-student_data_iti <- dbFetch(result)
-
-# Clear the result
-dbClearResult(result)
-dbDisconnect(con)
-
-# Admitted students only 
-student_iti_admis = student_data_iti %>%
-  filter(admission_status == "Yes")
-
-con <- dbConnect(RSQLite::SQLite(), "C:/Users/Admin/Documents/GitHub/sams/data/raw/sams.db")
-
-# Query data for ITI module for years 2017 to 2023
-query <- "SELECT * FROM students WHERE module = 'Diploma' AND year BETWEEN 2018 AND 2024;"
-
-# Send query to the database
-result <- dbSendQuery(con, query)
-
-# Fetch the relevant data
-student_data_dip <- dbFetch(result)
-
-# Clear the result
-dbClearResult(result)
-dbDisconnect(con)
-
-# Admitted Students only
-student_dip_admis = student_data_dip[!is.na(student_data_dip$sams_code),]
-
-
-```
-
-
 ## Institutions
 
 ```{r, echo=FALSE}
 
 ## Student count in ITIs
 iti_student_count = student_iti_admis %>%
-  group_by(year,typeof_institute) %>%
+  group_by(year,type_of_institute) %>%
   summarise(student_count = n(), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 iti_student_count_pivoted <- iti_student_count %>%
   pivot_wider( 
-    names_from = typeof_institute, 
+    names_from = type_of_institute, 
     values_from = student_count, 
     values_fill = 0  # Fill missing values with 0
   )
@@ -347,13 +300,13 @@ iti_student_count_summary <- iti_student_count_pivoted %>%
 
 ## Student count in Polytechnics
 dip_student_count = student_dip_admis %>%
-  group_by(year,typeof_institute) %>%
+  group_by(year,type_of_institute) %>%
   summarise(student_count = n(), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 dip_student_count_pivoted <- dip_student_count %>%
   pivot_wider( 
-    names_from = typeof_institute, 
+    names_from = type_of_institute, 
     values_from = student_count, 
     values_fill = NA  # Fill missing values with NA
   )
@@ -370,24 +323,24 @@ dip_student_count_summary <- dip_student_count_pivoted %>%
 
 # Student count in ITIs across districts
 #iti_student_dist_count = student_iti_admis %>%
-#  group_by(year,institute_district,typeof_institute,reported_institute) %>%
+#  group_by(year,institute_district,type_of_institute,reported_institute) %>%
 #  summarise(student_count = n(), .groups = "drop")
 #view(iti_student_count)
 # Student count in Polytechnics across districts
 #poly_student_dist_count = student_dip_admis %>%
-#  group_by(year,institute_district,typeof_institute,reported_institute) %>%
+#  group_by(year,institute_district,type_of_institute,reported_institute) %>%
 #  summarise(student_count = n(), .groups = "drop")
 
 
 # ITI Count
 iti_institutes_count = student_iti_admis %>%
-  group_by(year,typeof_institute) %>%
+  group_by(year,type_of_institute) %>%
   summarise(ITI_count = n_distinct(reported_institute), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 iti_institutes_count_pivoted <- iti_institutes_count %>%
   pivot_wider( 
-    names_from = typeof_institute, 
+    names_from = type_of_institute, 
     values_from = ITI_count, 
     values_fill = 0  # Fill missing values with 0
   )
@@ -402,13 +355,13 @@ iti_institutes_count_pivoted_summary <- iti_institutes_count_pivoted %>%
 
 # Polytechnics Count
 poly_institutes_count = student_dip_admis %>%
-  group_by(year,typeof_institute) %>%
+  group_by(year,type_of_institute) %>%
   summarise(poly_count = n_distinct(reported_institute), .groups = "drop")
 
 # Pivot the data wider to have separate columns for Pvt. and Govt. institutes
 poly_institutes_count_pivoted <- poly_institutes_count %>%
   pivot_wider( 
-    names_from = typeof_institute, 
+    names_from = type_of_institute, 
     values_from = poly_count, 
     values_fill = 0  # Fill missing values with 0
   )
@@ -426,7 +379,7 @@ poly_institutes_count_pivoted_summary <- poly_institutes_count_pivoted %>%
 
 # Poly Count across districts
 #poly_institutes_count = student_dip_admis %>%
-#  group_by(year,institute_district,typeof_institute) %>%
+#  group_by(year,institute_district,type_of_institute) %>%
 #  summarise(Polytechnics_count = n_distinct(reported_institute), .groups = "drop")
 
 
@@ -436,18 +389,18 @@ poly_institutes_count_pivoted_summary <- poly_institutes_count_pivoted %>%
 # ITI
 iti_level_student_count = student_iti_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,typeof_institute,reported_institute) %>%
+  group_by(institute_district,type_of_institute,reported_institute) %>%
   summarise(student_count = n(), .groups = "drop") %>%
-  select(reported_institute, student_count, typeof_institute, institute_district) %>%
+  select(reported_institute, student_count, type_of_institute, institute_district) %>%
     arrange(desc(student_count)) %>%
     slice_head(n = 10)
 
 # Polytechnics
 poly_level_student_count = student_dip_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,typeof_institute,reported_institute) %>%
+  group_by(institute_district,type_of_institute,reported_institute) %>%
   summarise(student_count = n(), .groups = "drop") %>%
-  select(reported_institute, student_count, typeof_institute, institute_district) %>%
+  select(reported_institute, student_count, type_of_institute, institute_district) %>%
   arrange(desc(student_count)) %>%
   slice_head(n = 10)
 
@@ -455,18 +408,18 @@ poly_level_student_count = student_dip_admis %>%
 # ITI
 iti_level_fem_student_count = student_iti_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,typeof_institute,reported_institute) %>%
+  group_by(institute_district,type_of_institute,reported_institute) %>%
   summarise(female_students = sum(gender == "Female"), .groups = "drop") %>%
-  select(reported_institute, female_students, typeof_institute, institute_district) %>%
+  select(reported_institute, female_students, type_of_institute, institute_district) %>%
     arrange(desc(female_students)) %>%
     slice_head(n = 10)
 
 # Polytechnics
 poly_level_fem_student_count = student_dip_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district,typeof_institute,reported_institute) %>%
+  group_by(institute_district,type_of_institute,reported_institute) %>%
   summarise(female_students = sum(gender=="Female"), .groups = "drop") %>%
-  select(reported_institute, female_students, typeof_institute, institute_district) %>%
+  select(reported_institute, female_students, type_of_institute, institute_district) %>%
   arrange(desc(female_students)) %>%
   slice_head(n = 10)
 
@@ -474,19 +427,19 @@ poly_level_fem_student_count = student_dip_admis %>%
 # count of available trades in ITIs 2023
 iti_trade_count = student_iti_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district, reported_institute, typeof_institute) %>%
+  group_by(institute_district, reported_institute, type_of_institute) %>%
   summarise(trade_count = n_distinct(reported_branch_or_trade), .groups = "drop") %>%
   arrange(desc(trade_count)) %>% 
-  select(reported_institute, trade_count, typeof_institute,institute_district) %>%
+  select(reported_institute, trade_count, type_of_institute,institute_district) %>%
   slice_head(n = 10)
 
 # count of available trades in ITIs 2023
 poly_trade_count = student_dip_admis %>%
   filter(year == 2023) %>%
-  group_by(institute_district, reported_institute, typeof_institute) %>%
+  group_by(institute_district, reported_institute, type_of_institute) %>%
   summarise(branch_count = n_distinct(reported_branch_or_trade), .groups = "drop") %>%
   arrange(desc(branch_count)) %>% 
-  select(reported_institute, branch_count, typeof_institute,institute_district) %>%
+  select(reported_institute, branch_count, type_of_institute,institute_district) %>%
   slice_head(n = 10)
 
 
